[package]
name = "stepper"
version = "0.1.0"
authors = ["Daniel Tebbutt <moeruze.burning+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.3"
laminar = "0.3"

[dependencies.crossterm]
version = "0.11"
default-features = false
features = ["cursor", "terminal", "screen", "input"]
